--- a/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
+++ b/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
@@ -1,3 +1,4 @@
+<div class="topics">
 <h3>Pitching New Articles</h3>
 <p>Your teenage years can be some of the most confusing, exciting, and transformative years in your life. It is during this time you will learn what you think of yourself, what you think of others, and what you think of the world. The Teen Magazine aims to be with our teenage readers every step of the way and your articles should reflect some aspect of this journey.</p>
 <%= image_tag("friends_laughing.jpg", class: "image_fit_scrn mb-4") %>
@@ -124,3 +125,4 @@
 
 <h4>Conclusion:</h4>
 <p class="mb-0">Great job for completing this tutorial and watching the videos! You can now start <a target="_blank" href="/pitches/new">pitching article topics</a> that other writers can claim.</p>
+</div>
