--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,19 +1,17 @@
-<!-- shows all accepted applications -->
-
 <div class="skinny_wrapper">
-    <h1 id="page_title">Writer Applications</h1>
-    <% @applies.each do | application | %>
-      <% @user = User.where(email: application.email.downcase).first %>
-        <% if @user.nil? %>
-          <div class="card mb-3 <% if @unseen_applications.include? application %> unread <% end %>">
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #4ABEB6;" %></h5>
-              <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.strftime("%D") %></small></p>
-              <p class="card-text"><%= application.description %></p>
-            </div>
+  <h1 id="page_title">Writer/Editor Applications</h1>
+  <% @applies.each do | application | %>
+    <% @user = User.find_by(email: application.email.downcase) %>
+      <% if (@user.nil? && application.rejected_writer_at.nil?) || (!@user.editor && (application.kind.eql? "Editor") && application.rejected_editor_at.nil?) %>
+        <div class="card mb-3 <% if @unseen_applications.include? application %> unread <% end %>">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #4ABEB6;" %> (<%= application.kind %> Application)</h5>
+            <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.strftime("%D") %></small></p>
+            <p class="card-text"><%= application.description %></p>
           </div>
-        <% end %>
-    <% end %>
-    <%= will_paginate @applies %>
-    <br>
-  </div>
+        </div>
+      <% end %>
+  <% end %>
+  <%= will_paginate @applies %>
+  <br>
+</div>
