--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,6 +1,6 @@
 <!-- show application to editor -->
 
-<h1 id="page_title">Writer Application <%= @application.id %></h1>
+<h1 id="page_title"><%= @application.kind || "Writer" %> Application <%= @application.id %></h1>
 <br>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @user do |f| %>
@@ -16,10 +16,12 @@
     <span>Grade level:</span>
     <b><%= @application.grade %></b>
     <br>
-    <span class="d-block mt-4">Cover Letter:</span>
-      <p style="margin: 10px 0 0 0;"><%= @application.description %></p>
-    <br />
+    <% if @application.description.present? %>
+      <span class="d-block mt-4">Cover Letter:</span>
+      <p style="margin: 10px 0 0 0;"><%= markdown @application.description %></p>
+    <% end %>
     <% if @application.resume.present? %>
+      <br />
       <span>Resume:</span>
       <iframe style="width: 100%; height: 600px;" src="<%= @application.resume %>"></iframe>
     <% end %>
@@ -28,13 +30,36 @@
       <iframe style="width: 100%; height: 600px;" src="<%= @application.sample_writing %>"></iframe>
       <br>
     <% end %>
-    <span>Make Editor:</span>
-    <%= f.check_box :editor %>
-    <br><br />
-    <%= f.hidden_field :monthly_views, value: 0 %>
-    <%= f.hidden_field :password, value: [*('A'..'Z'),*('0'..'9')].shuffle[0,8].join %>
-    <%= f.submit 'Accept Application', class: "mt-2" %>
+    <% if @application.editor_feedback.present? %>
+      <span>Editor Feedback:</span>
+      <p>1. <%= link_to "Is Private School Or Public School Better for You?", "https://www.theteenmagazine.com/is-private-school-or-public-school-better-for-you", target: "_blank" %></p>
+      <p>2. <%= link_to "Rejection Sensitivity: Causes and How to Cope, for Teenagers", "https://www.theteenmagazine.com/rejection-sensitivity-causes-and-how-to-cope-for-teenagers", target: "_blank" %></p>
+      <p>3. <%= link_to "Fall Fashion Staples You Must Have in Your Wardrobe", "https://www.theteenmagazine.com/fall-fashion-staples-you-must-have-in-your-wardrobe", target: "_blank" %></p>
+      <p style="margin: 10px 0 0 0;"><%= markdown @application.editor_feedback %></p>
+    <% end %>
+    <% if @application.editor_revision.present? %>
+      <span>Editor Revision:</span>
+      <p style="margin: 10px 0 0 0;"><%= markdown @application.editor_revision %></p>
+    <% end %>
+    <% if @application.editor_pitches.present? %>
+      <span>Editor Pitches:</span>
+      <p style="margin: 10px 0 0 0;"><%= markdown @application.editor_pitches %></p>
+    <% end %>
+    <% if @user.id.present? %>
+      <p>
+        <%= @user.full_name %> has published <%= link_to "#{@user.posts.published.count} articles", @user, target: "_blank" %>.
+      </p>
+    <% end %>
+    <% if @user.id.nil? %>
+      <span>Make Editor:</span>
+      <%= f.check_box :editor %>
+      <%= f.hidden_field :password, value: [*('A'..'Z'),*('0'..'9')].shuffle[0,8].join %>
+      <br><br />
+    <% end %>
+    <%= f.hidden_field :apply_id, value: @application.id %>
+    <%= link_to "Delete", apply_path(@application), style: "float: right;", class: "mt-4", method: :delete, data: {confirm: "Are you sure you want to delete this application?"} %>
+    <%= f.submit 'Accept', class: "mt-2", name: "decision", value: "Accept" %>
+    <%= f.submit 'Reject', class: "mt-2", name: "decision", value: "Reject" %>
   <% end %>
-  <br>
   <br>
 </div>
