--- a/app/views/applies/editor.html.erb
+++ b/app/views/applies/editor.html.erb
@@ -18,7 +18,7 @@
 <p>If you have already been published on The Teen Magazine and are confident in your ability to give helpful feedback, please fill out the application and we will get back to you within 3-4 business days. If you have not heard a response by then, please email editors@theteenmagazine.com.</p>
 <p><b>You have applied to The Teen Magazine editor team <%= @applied_num_times %> time(s) before.</b></p>
 
-<% if (@application.kind.eql? "Editor") && (@application.created_at.present?) && !current_user.editor %>
+<% if (@application.kind&.eql? "Editor") && (@application.created_at.present?) && !current_user.editor %>
   <div style="font-weight: bolder !important; font-style: italics !important;">
     <p>Your editor application was submitted on <%= @application.updated_at.strftime("%D") %> and is being reviewed by an admin.</p>
     <p><%= @application.first_name %> <%= @application.last_name %></p>
