--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -5,7 +5,7 @@
       <% if (@user.nil? && application.rejected_writer_at.nil?) || (!@user.editor && (application.kind.eql? "Editor") && application.rejected_editor_at.nil?) %>
         <div class="card mb-3 <% if @unseen_applications.include? application %> unread <% end %>">
           <div class="card-body">
-            <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #4ABEB6;" %> (<%= application.kind %> Application)</h5>
+            <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #4ABEB6;" %> (<%= application.kind || "Writer" %> Application)</h5>
             <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.strftime("%D") %></small></p>
             <p class="card-text"><%= application.description %></p>
           </div>
