--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -150,6 +150,8 @@
   <h1 class="title">This article has already been published and can only be edited by the author(s) and admins.</h1>
 <% end %>
 
+
+<script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
 <script type="text/javascript">
   $('document').ready(function(){
     var unsaved = false;
