--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -627,39 +627,6 @@ hr {
   clear: both;
 }
 
-.signupdiv {
-  width: 300px;
-  margin-left: 30px;
-  float: right;
-  .container {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    .exclusive-offer {
-      height: 210px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-image: url("https://i.ibb.co/JsS5zrC/subscribe.png");
-      background-position: center;
-      margin-bottom: -10px;
-
-      #exclusive-title--id {
-        margin-top: 45px;
-        padding: 10px;
-        font-family: "Playfair Display";
-        font-weight: 400;
-        font-size: 20px;
-      }
-      .exclusive-title {
-        color: white;
-        text-align: center;
-        margin-left: 10px;
-        margin-right: 10px;
-      }
-    }
-  }
-}
-
 #mc_embed_signup {
   margin-top: 0 !important;
   .flex--email {
@@ -755,10 +722,10 @@ hr {
   flex-direction: row;
   .flexbox {
     display: inline-flex;
-    max-width: 900px;
-    flex-shrink: 2;
-    flex-grow: 2;
     justify-content: center;
+    flex-shrink: 300;
+    flex-grow: 300;
+    flex: 1;
   }
 }
 
@@ -1209,6 +1176,16 @@ p, ul, ol {
   }
 }
 
+@media (min-width: 1100px) {
+  .ads_responsive {
+    width: 300px;
+  }
+  .articles2-6 {
+    margin-right: 30px;
+    max-height: 480px;
+  }
+}
+
 @media (max-width: 1100px) {
   .parentflex {
     flex-direction: column;
@@ -1229,72 +1206,11 @@ p, ul, ol {
       }
     }
   }
-
-  .signupdiv {
-    width: 100%;
-    margin: 0;
-    .container {
-      background-color: #66B39F;
-      max-width: 100%;
-      height: fit-content;
-      padding: 20px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .exclusive-offer {
-        width: 50%;
-        background-image: url();
-        margin-right: 10px;
-        height: auto;
-        .exclusive-title, #exclusive-title--id {
-          margin: 0 auto;
-          width: fit-content;
-        }
-      }
-      .signup {
-        width: 50%;
-        color: white !important;
-        max-width: 400px;
-        margin: 0 auto;
-        #mc_embed_signup_scroll {
-          h2 {
-            display: none;
-          }
-          .flex--email {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            #mc-embedded-subscribe {
-              margin: 0 5px !important;
-              height: 35px !important;
-              font-size: 15px !important;
-            }
-          }
-          #mce-responses-container {
-            * {
-              color: white !important;
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
 @media (max-width: 954px) {
   .social {
     display: none;
-  }
-}
-
-@media (max-width: 700px) {
-  .signupdiv {
-    .container {
-      flex-direction: column;
-      .exclusive-offer, .signup {
-        width: 100%;
-      }
-    }
   }
 }
 
