--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -19,7 +19,7 @@ blockquote {
 <div class="flex_wrapper_posts">
   <div class="skinny wrapper_padding" id="post_show_content">
     <div class="flex_wrapper_columns">
-      <div class="content_wrapper">
+      <div class="content_wrapper mb-4">
         <header id="post_title_show">
           <h1 class="title_article_show"><%= @post.title %></h1>
           <h3 id="category_title"><%= link_to(@post.category.name, @post.category) %></h3>
@@ -73,7 +73,7 @@ blockquote {
               <div class="post_content">
                 <%= markdown @post.content %>
               </div>
-              <p class="mt-0 mb-4"><i>Did you enjoy reading <%= @post.user.full_name %>'s article? Let your friends know by using any of the sharing options below.</p>
+              <p class="mt-0 mb-4"><i>Did you enjoy reading <%= @post.user.full_name %>'s article? Let your friends know by using any of the sharing options below.</i></p>
               <div class="social_icons social_icons_full">
                 <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
                   &name=<%= @post.title.sub! '#', '' %>
@@ -113,26 +113,9 @@ blockquote {
                 <%= render :partial => 'users/profile', locals: {user: collab} %>
                <% end %>
               </div>
-              <br />
-              <div id="mc_embed_signup" style="width: 100%; margin: 20px 0; margin-left: 0px;">
-                <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                    <h2>Loving The Teen Magazine? Subscribe!</h2>
-                    <div class="mc-field-group">
-                      <input placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                    </div>
-                    <div >
-                      <div id="mce-error-response" style="display:none"></div>
-                      <div id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" value="Subscribe" name="subscribe subscribe_btn" id="mc-embedded-subscribe" class="button"></div>
-                    </div>
-                </form>
-              </div>
             </div>
-    </div>
-  </div>
+        </div>
+      </div>
   </div>
   <div class="post_apply">
     <div class="articles">
@@ -182,20 +165,6 @@ blockquote {
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
   </div>
-  <br />
- <%= javascript_include_tag 'mailchimp' %>
- <script>
- (function() { // DON'T EDIT BELOW THIS LINE
- var d = document, s = d.createElement('script');
- s.src = 'https://the-teen-magazine.disqus.com/embed.js';
- s.setAttribute('data-timestamp', +new Date());
- (d.head || d.body).appendChild(s);
- })();
- </script>
- <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div>
-<div id="disqus_thread"></div>
-
 </div>
 
 <script>
