--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,8 +25,18 @@
             <% end %>
           </div>
         </div>
-        <div class="signupdiv">
-          <%= render 'signup' %>
+        <div class="ads_wrapper ads_responsive">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- homepage-0 -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-4566416931763342"
+               data-ad-slot="8120207605"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
       </div>
     </div>
@@ -152,5 +162,3 @@
     <% end %>
   </div>
 </div>
-
-<%= javascript_include_tag 'mailchimp' %>
