--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1118,7 +1118,7 @@ p, ul, ol {
     top: 66px;
     max-width: 300px;
     min-width: 300px;
-    background-color: red !important;
+    background-color: white !important;
   }
 }
 
