--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -121,14 +121,17 @@ blockquote {
     <div class="articles">
       <div class="flex_other_articles">
         <div class="ads_wrapper">
-          <!-- Post right column -->
-          <ins class="adsbygoogle"
-               style="display:inline-block;width:300px;height:250px"
-               data-ad-client="ca-pub-4566416931763342"
-               data-ad-slot="2500875060"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <div id="ezoic-pub-ad-placeholder-119">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Post right column -->
+            <ins class="adsbygoogle"
+                 style="display:inline-block;width:300px;height:250px"
+                 data-ad-client="ca-pub-4566416931763342"
+                 data-ad-slot="2500875060"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
         </div>
         <h3>Trending in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
         <div class="contain_articles">
@@ -144,25 +147,31 @@ blockquote {
       </div>
     </div>
     <div class="fixed_ads ads_wrapper">
-      <!-- Square column right -->
-      <ins class="adsbygoogle"
-      style="display:inline-block;width:300px;height:250px"
-      data-ad-client="ca-pub-4566416931763342"
-      data-ad-slot="6106391233"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <div id="ezoic-pub-ad-placeholder-120">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Square column right -->
+        <ins class="adsbygoogle"
+        style="display:inline-block;width:300px;height:250px"
+        data-ad-client="ca-pub-4566416931763342"
+        data-ad-slot="6106391233"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
       <br>
-      <!-- Post column right -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-4566416931763342"
-           data-ad-slot="1161186312"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <div id="ezoic-pub-ad-placeholder-121">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Post column right -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-4566416931763342"
+             data-ad-slot="1161186312"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </div>
   </div>
 </div>
