--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,16 +26,19 @@
           </div>
         </div>
         <div class="ads_wrapper ads_responsive">
-          <!-- Homepage 1 -->
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-4566416931763342"
-               data-ad-slot="2546543885"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <div id="ezoic-pub-ad-placeholder-116">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Homepage 1 -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-4566416931763342"
+                 data-ad-slot="2546543885"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
         </div>
       </div>
     </div>
@@ -84,16 +87,19 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <!-- homepage-0 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4566416931763342"
-             data-ad-slot="8120207605"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <div id="ezoic-pub-ad-placeholder-117">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- homepage-0 -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-4566416931763342"
+               data-ad-slot="8120207605"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
       </div>
       <br>
       <h1 class="section--title">Trending Articles</h1>
@@ -121,16 +127,19 @@
     </div>
     <div class="most_read contain_articles">
       <div class="ads_wrapper">
-        <!-- Homepage 1 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4566416931763342"
-             data-ad-slot="2546543885"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <div id="ezoic-pub-ad-placeholder-118">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- Homepage 1 -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-4566416931763342"
+               data-ad-slot="2546543885"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
       </div>
       <br>
     </div>
