--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -50,6 +50,7 @@
   .flex_other_articles {
     display: flex;
     flex-direction: column;
+    background-color: white;
     .ctgry_article {
       display: flex;
       flex-direction: row;
