--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -121,15 +121,17 @@ blockquote {
     <div class="articles">
       <div class="flex_other_articles">
         <div class="ads_wrapper">
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- Post right column -->
-          <ins class="adsbygoogle"
-               style="display:inline-block;width:300px;height:250px"
-               data-ad-client="ca-pub-4566416931763342"
-               data-ad-slot="2500875060"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <div id="ezoic-pub-ad-placeholder-119">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Post right column -->
+            <ins class="adsbygoogle"
+                 style="display:inline-block;width:300px;height:250px"
+                 data-ad-client="ca-pub-4566416931763342"
+                 data-ad-slot="2500875060"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
         </div>
         <h3>Trending in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
         <div class="contain_articles">
