--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -156,6 +156,7 @@ iframe {
 .ads_wrapper {
   z-index: 600000;
   max-width: 100%;
+  min-height: 250px;
   display: block;
   .adsbygoogle {
     margin: 0 auto;
