rack deflator to production

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -387,6 +387,9 @@
        margin: 25px auto !important;
        display: block;
      }
+     iframe {
+       margin: 0 auto !important;
+     }
     html {
        margin-left: auto;
        margin-right: auto;
