--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -12,6 +12,6 @@
         </div>
       <% end %>
   <% end %>
-  <%= will_paginate @applies %>
+  <%== pagy_nav(@pagy).html_safe %>
   <br>
 </div>
