--- a/app/views/users/dashboard/_public_writer_profile.html.erb
+++ b/app/views/users/dashboard/_public_writer_profile.html.erb
@@ -27,7 +27,7 @@
        </div>
      </div>
      <div class="mb-3 mt-3">
-       <%= will_paginate @user_posts_approved %>
+       <%== pagy_nav(@pagy).html_safe %>
      </div>
    </div>
 </div>
