--- a/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
+++ b/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
@@ -14,5 +14,5 @@
 </div>
 
 <div class="mt-3">
-  <%= will_paginate @pitches, :params => { :controller => "users", :action => "onboarding", :step => "next_steps" } %>
+  <%== pagy_nav(@pagy).html_safe %>
 </div>
