bug fixes and sped up rails applicaiton

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -412,6 +412,12 @@ html, body {
   }
 }
 
+.will_paginate_container {
+  a {
+    padding: 0 10px 20px 0;
+  }
+}
+
 .pagination {
   justify-content: center;
   em, span {
