--- a/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
+++ b/app/views/users/onboarding/next_steps_partials/_pitches.html.erb
@@ -13,6 +13,6 @@
   <% end %>
 </div>
 
-<div class="mt-3">
-  <%== pagy_nav(@pagy).html_safe %>
+<div class="mt-3 will_paginate_container">
+  <%= will_paginate @pitches, :params => { :controller => "users", :action => "onboarding", :step => "next_steps" } %>
 </div>
