--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,5 @@
 @import "mdbootstrap/css/bootstrap.min.css";
-@import "mdbootstrap/css/mdb";
+@import "mdbootstrap/css/mdb.min";
 @import 'normalize';
 @import 'common';
 @import "userprofile";
