lazy load images example

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,5 +109,7 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
     <script src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
+    <%= javascript_include_tag 'mdb.min' %>
+    <%= javascript_include_tag 'plugins/src_js_pro_lazyLoad' %>
   </body>
 </html>
