--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -77,7 +77,7 @@ blockquote {
         <div id="content">
           <div class="flex_wrapper_content">
             <div class="post_wrapper">
-              <div class="post_content">
+              <div class="post_content lazy">
                 <%= markdown @post.content %>
               </div>
               <p class="mt-0 mb-4"><i>Did you enjoy reading <%= @post.user.full_name %>'s article? Let your friends know by using any of the sharing options below.</i></p>
