--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,7 +53,7 @@
         <% publishedPosts.where(:category_id => Category.friendly.find("student-life").id).all.order("publish_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
-            <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
+            <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large2)}, alt: post.title, class: "lazy"), post )%>
             <h1><%= link_to post.title, post %></h1>
             <p><%= post.publish_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
@@ -65,7 +65,7 @@
         <% publishedPosts.where(:category_id => Category.friendly.find("opinion").id).all.order("publish_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
-            <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
+            <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large2)}, alt: post.title, class: "lazy"), post )%>
             <h1><%= link_to post.title, post %></h1>
             <p><%= post.publish_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
@@ -77,7 +77,7 @@
         <% publishedPosts.where(:category_id => Category.friendly.find("culture").id).all.order("publish_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
-            <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
+            <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large2)}, alt: post.title, class: "lazy"), post )%>
             <h1><%= link_to post.title, post %></h1>
             <p><%= post.publish_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
@@ -117,7 +117,7 @@
         <% publishedPosts.where(:category_id => Category.friendly.find("lifestyle").id).all.order("publish_at desc")[0..5].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
-            <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
+            <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large2)}, alt: post.title, class: "image_recent_articles lazy"), post )%>
             <h1><%= link_to post.title, post %></h1>
             <p><%= post.publish_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
@@ -150,7 +150,7 @@
     <% publishedPosts.each_with_index do |post, index| %>
       <% if index < 3 %>
         <div style="margin-bottom: 20px;" class="ctgry_article recent">
-          <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title), post, class: "image_recent_articles" )%>
+          <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large)}, alt: post.title, class: "image_recent_articles lazy"), post )%>
           <h1><%= link_to post.title, post %></h1>
           <p class="category"><%= link_to(post.category.name, post.category) %></p>
           <p><%= post.publish_at.strftime("%A, %b %d")%></p>
@@ -164,7 +164,7 @@
             <p><%= post.publish_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description.truncate_words(20) %></p>
           </div>
-          <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title), post, class: "image_recent_articles" )%>
+          <%=link_to(image_tag("thumbnail.png", data: { "lazy-src" => post.thumbnail.url(:large)}, alt: post.title, class: "image_recent_articles lazy"), post )%>
         </div>
       <% end %>
     <% end %>
