--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,12 @@
           <header id="main_navigation" class="clearfix header-navigation">
             <div id="banner" class="banner-relative">
               <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
-              <a id="name_wrapper" href="/"><div id="name"></div></a>
+              <a id="name_wrapper" href="/">
+                <picture>
+                  <source srcset="/assets/teenmag.png" media="(min-width: 800px)">
+                  <%= image_tag("teenmag_mobile.png", :data => {"loading" => "lazy"}, :id => "name") %>
+                </picture>
+              </a>
               <div class="social-media">
                 <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
                 <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
