--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,7 @@
       src="https://www.facebook.com/tr?id=2099586743677741&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
-    <script src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'mdb.min' %>
     <%= javascript_include_tag 'plugins/src_js_pro_lazyLoad' %>
   </body>
