--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -40,7 +40,12 @@
               <header id="main_navigation" class="clearfix header-navigation">
                 <div id="banner">
                   <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
-                  <a id="name_wrapper" href="/"><%= image_tag("teenmag.png", :data => {"loading" => "lazy"}, :id => "name") %></a>
+                  <a id="name_wrapper" href="/">
+                    <picture>
+                      <source srcset="<%= image_url('teenmag.png') %>" media="(min-width: 800px)">
+                      <%= image_tag("teenmag.png", :data => {"loading" => "lazy"}, :id => "name") %>
+                    </picture>
+                  </a>
                   <div class="social-media">
                     <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
                     <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
