--- a/app/views/layouts/partials/_header-mobile.html.erb
+++ b/app/views/layouts/partials/_header-mobile.html.erb
@@ -3,7 +3,7 @@
     <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
     <a id="name_wrapper" href="/">
       <picture>
-        <source srcset="/assets/teenmag.png" media="(min-width: 800px)">
+        <source srcset="<%= image_url('teenmag.png') %>" media="(min-width: 800px)">
         <%= image_tag("teenmag_mobile.png", :data => {"loading" => "lazy"}, :id => "name") %>
       </picture>
     </a>
