added font awesome script to head

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= preload_link_tag 'bootstrap.min'%>
     <%= javascript_include_tag 'application'%>
+    <script src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="site-wrapper">
@@ -78,7 +79,6 @@
       src="https://www.facebook.com/tr?id=2099586743677741&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
-    <script defer src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'mdb.min' %>
   </body>
 </html>
